fix: 收紧 Cap API 配置校验